--- a/smsgw/static/css/app.css
+++ b/smsgw/static/css/app.css
@@ -1,1 +1,56 @@
 /** Main app.css file */
+
+html { width: 100%; height: 100%; }
+body {
+    width: 100%; 
+    height: 100%;
+    font-family: "MyriadProLight";
+    font-size: 13px;
+    -webkit-font-smoothing: antialiased;
+    padding: 0;
+    margin: 0;
+    color: #000000;
+}
+
+/** Utils */
+.cleaner { clear: both; }
+
+/** Loading */
+
+#smsgw { position: relative; width: 100%; height: 100%; }
+#smsgw svg.throbber { position: absolute; width: 50px; height: 50px; margin: auto; top: 0; left: 0; bottom: 0; right: 0; }
+
+/** Header */
+header { display: block; padding: 5px 20px; border-bottom: 1px solid #e5e5e5; }
+header #logo { float: left; width: 100px; font-size: 30px; }
+header ul#menu { float: left; width: auto; list-style: none; padding: 0; margin: 0; }
+header ul#menu > li { display: inline-block; padding: 0; margin: 0; }
+header ul#menu > li > a { font-size: 30px; color: #0088ff; text-decoration: none; padding: 0 10px 0 10px }
+header ul#menu > li > a:hover { color: #054f90; }
+header ul#menu > li > a.active { color: #054f90; }
+header .user-menu { float: right; width: auto; padding: 0; }
+header .user-menu > a { position: relative; text-decoration: none; color: #000000; }
+header .user-menu > a > .info { float: left; text-align: right; padding-right: 15px; }
+header .user-menu > a > .info > .name { font-size: 18px; color: #0088ff; }
+header .user-menu > a:hover > .info > .name { color: #054f90; }
+header .user-menu > a > .info > .company { font-size: 14px; text-transform: uppercase; }
+header .user-menu > a > .chevron {
+    position: absolute;
+    top: 5px;
+    right: 0;
+    display: block;
+    width: 7px;
+    height: 7px;
+    border-top: 1px solid #0088ff;
+    border-right: 1px solid #0088ff;
+    border-width: 1px;
+    -ms-transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+    transform: rotate(135deg);
+}
+header .user-menu > a:hover > .chevron { border-color: #054f90 }
+
+/** Subheader */
+#subheader { display: block; padding: 10px 20px; background-color: #f5f5f5; border-bottom: 1px solid #e5e5e5; }
+
+
