--- a/smsgw/static/css/app.css
+++ b/smsgw/static/css/app.css
@@ -1,34 +1,64 @@
-/** Main app.css file */
+/* Main app.css file */
 
 html { width: 100%; height: 100%; }
 body {
     width: 100%; 
     height: 100%;
     font-family: "MyriadProLight";
-    font-size: 13px;
+    font-size: 14px;
     -webkit-font-smoothing: antialiased;
     padding: 0;
     margin: 0;
+    line-height: 150%;
     color: #000000;
 }
 
-/** Utils */
+/* Utils */
 .cleaner { clear: both; }
 
-/** Loading */
+
+/* General */
+a { color: #0088ff; text-decoration: underline; }
+a:hover { text-decoration: none; }
+
+/* Forms */
+input { padding: 15px; border: 1px solid #e5e5e5; border-radius: 0; }
+button.ladda-button { background: #0088ff; }
+
+/* Flashes */
+
+.flashes { }
+.flashes > div { display: block; position: relative; padding: 15px; margin: 10px 0 0 0; font-weight: bold; overflow: hidden; }
+/*.flashes > div:first-child { margin-top: 0px; }*/
+.flashes > div.alert { background: #ffecce; border: 1px solid #e9c59b; color: #e8302c; }
+.flashes > div.success { background: #edfbd8; border: 1px solid #bfde84; color: #508631;  }
+.flashes > div.info { background: #ecf9ff; border: 1px solid #bbdbe0; color: #0888c3;  }
+
+/* Loading */
 
 #smsgw { position: relative; width: 100%; height: 100%; }
-#smsgw svg.throbber { position: absolute; width: 50px; height: 50px; margin: auto; top: 0; left: 0; bottom: 0; right: 0; }
 
-/** Header */
-header { display: block; padding: 5px 20px; border-bottom: 1px solid #e5e5e5; }
+/* Sign in/up and reset password */
+#sign { width: 300px; margin: 0 auto 0 auto; padding: 11% 0 0 0; } 
+#sign h1 { float: left; margin: 0; padding: 0; font-size: 40px; font-weight: normal; color: #000000; }
+#sign h2 { float: right; margin: 0; padding: 0; font-size: 40px; font-weight: normal; color: #0088ff; }
+#sign form input { width: 268px; margin: 10px 0 0 0; }
+#sign form input:first-child { margin-top: 25px; }
+#sign form button { width: 300px; margin: 10px 0 0 0; }
+#sign > .info { margin-top: 15px; width: 100%; line-height: 150%; }
+#sign.resetPassword h2 { font-size: 28px; padding-top: 3px; }
+#sign.resetPassword form input:first-child { margin: 0; }
+
+
+/* Header */
+header { display: block; padding: 5px 20px; border-bottom: 1px solid #e5e5e5; position: relative; }
 header #logo { float: left; width: 100px; font-size: 30px; }
 header ul#menu { float: left; width: auto; list-style: none; padding: 0; margin: 0; }
 header ul#menu > li { display: inline-block; padding: 0; margin: 0; }
 header ul#menu > li > a { font-size: 30px; color: #0088ff; text-decoration: none; padding: 0 10px 0 10px }
 header ul#menu > li > a:hover { color: #054f90; }
 header ul#menu > li > a.active { color: #054f90; }
-header .user-menu { float: right; width: auto; padding: 0; }
+header .user-menu { float: right;  width: auto; padding: 0; }
 header .user-menu > a { position: relative; text-decoration: none; color: #000000; }
 header .user-menu > a > .info { float: left; text-align: right; padding-right: 15px; }
 header .user-menu > a > .info > .name { font-size: 18px; color: #0088ff; }
@@ -49,8 +79,21 @@ header .user-menu > a > .chevron {
     transform: rotate(135deg);
 }
 header .user-menu > a:hover > .chevron { border-color: #054f90 }
+header .user-menu > ul { 
+    display: none;
+    position: absolute; 
+    top: 50px; 
+    right: 20px; 
+    padding: 0;
+    margin: 0;
+    background: white; 
+    list-style: none;
+    box-shadow: 0 0 5px #888888;
+}
+header .user-menu > ul.opened { display: block; }
+header .user-menu > ul > li > a { padding: 10px 20px 10px 20px; margin: 0; }
 
-/** Subheader */
+/* Subheader */
 #subheader { display: block; padding: 10px 20px; background-color: #f5f5f5; border-bottom: 1px solid #e5e5e5; }
 
 
