--- a/smsgw/templates/index.html
+++ b/smsgw/templates/index.html
@@ -6,29 +6,19 @@
     <meta http-equiv="content-language" content="en" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/fonts.css" rel="stylesheet" media="screen">
-    <link href="/css/app.css" rel="stylesheet" media="screen">
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/ladda.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/spinner.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/fonts.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/app.css') }}">
 </head>
 <body>
     <div id="smsgw">
-        <svg class="throbber" viewBox="0 0 300 300" xmlns="http://www.w3.org/2000/svg" version="1.1">
-            <path d="M 150,0
-                   a 150,150 0 0,1 106.066,256.066
-                   l -35.355,-35.355
-                   a -100,-100 0 0,0 -70.711,-170.711 z"
-                   fill="#3d7fe6">
-            <animateTransform 
-                attributeName="transform" 
-                attributeType="XML"
-                type="rotate" 
-                from="0 150 150" 
-                to="360 150 150"
-                begin="0s" 
-                dur="1s" 
-                fill="freeze" 
-                repeatCount="indefinite" />
-            </path>
-        </svg>
+        <div class="spinner fullscreen">
+            <div class="dots">
+                Loading...
+            </div>
+        </div>
     </div>
 
     <script type="text/javascript" src="{{ url_for('static', filename='build/bundle.js') }}"></script>
