--- a/smsgw/static/css/app.css
+++ b/smsgw/static/css/app.css
@@ -16,13 +16,19 @@ body {
 /* Utils */
 .cleaner { clear: both; }
 
-/* */
-.span-2 { width: 50%; }
-.span-3 { width: 33%; }
-.span-5 { width: 25%; }
-
 /* General */
-a { color: #0088ff; text-decoration: underline; }
+.span-1 { width: 100%; box-sizing: border-box; }
+.span-2 { width: 50%; box-sizing: border-box; }
+.span-3 { width: 33%; box-sizing: border-box; }
+.span-5 { width: 25%; box-sizing: border-box; }
+
+.left { float: left; }
+.right { float: right; }
+
+.hidden { display: none; }
+
+/* A */
+a { color: #0088ff; text-decoration: underline; cursor: pointer; }
 a:hover { text-decoration: none; color: #054f90; }
 
 /* Forms */
@@ -101,6 +107,7 @@ header .user-menu > ul > li > a { padding: 10px 20px 10px 20px; margin: 0; }
 /* Subheader */
 #subheader { display: block; padding: 20px 20px 0 20px; background-color: #f5f5f5; border-bottom: 1px solid #e5e5e5; }
 #subheader h1 { font-weight: normal; font-size: 26px; margin-top: 0; line-height: 24px; }
+#subheader h2 { font-weight: normal; font-size: 18px; margin-top: 0; }
 #subheader a { display: inline-block; position: relative; margin-right: 15px; font-size: 18px; text-decoration: none; padding-bottom: 18px; }
 #subheader a.active { color: gray; border-bottom: 1px solid gray; }
 #subheader a.back { cursor: pointer; font-size: 14px; line-height: 15px; padding-left: 10px; }
@@ -124,9 +131,17 @@ header .user-menu > ul > li > a { padding: 10px 20px 10px 20px; margin: 0; }
 #context h1 { font-weight: normal; font-size: 23px; line-height: 24px; }
 #context a { text-decoration: none; position: relative; }
 
+/* Tags */
+#context .tags { float: left; width: 250px; margin-left: 40px; }
+#context .tags .autocomplete { float: left; position: relative; }
+#context .tags .autocomplete input { float: left; width: 180px; }
+#context .tags .autocomplete .throbber { float: right; width: 32px; height: 32px; margin-top: 5px; background: url('/images/throbber.gif') no-repeat; } 
+#context .tags .autocomplete ul.options { position: absolute; top: 47px; max-height: 300px; width: 212px; z-index: 10; padding: 0; margin: 0; background: #ffffff; list-style: none; border: 1px solid #e5e5e5; border-top: 0; }
+#context .tags .autocomplete ul.options li { float: left; width: 202px; margin: 0; padding: 5px; cursor: pointer; border-bottom: 1px solid #e5e5e5; }
+
 /* Form */
 #context form label { font-weight: bold; margin-bottom: 5px; }
-#context form .line { float: left; width: 100%; margin-bottom: 15px; }
+#context form .line { float: left; width: 100%; padding: 0; margin-bottom: 15px; }
 #context form .line label { float: left; width: 100%; }
 
 /* Table */
