--- a/smsgw/static/css/app.css
+++ b/smsgw/static/css/app.css
@@ -108,6 +108,8 @@ header .user-menu > ul > li > a { padding: 10px 20px 10px 20px; margin: 0; }
 #subheader { display: block; padding: 20px 20px 0 20px; background-color: #f5f5f5; border-bottom: 1px solid #e5e5e5; }
 #subheader h1 { font-weight: normal; font-size: 26px; margin-top: 0; line-height: 24px; }
 #subheader h2 { font-weight: normal; font-size: 18px; margin-top: 0; }
+#subheader h3 { font-weight: normal; font-size: 15px; margin-top: 0; margin-bottom: 0; }
+#subheader h3 .small { font-size: 14px; }
 #subheader a { display: inline-block; position: relative; margin-right: 15px; font-size: 18px; text-decoration: none; padding-bottom: 18px; }
 #subheader a.active { color: gray; border-bottom: 1px solid gray; }
 #subheader a.back { cursor: pointer; font-size: 14px; line-height: 15px; padding-left: 10px; }
