--- a/smsgw/static/css/app.css
+++ b/smsgw/static/css/app.css
@@ -2,7 +2,7 @@
 
 html { width: 100%; height: 100%; }
 body {
-    width: 100%; 
+    width: 100%;
     height: 100%;
     font-family: "MyriadProLight";
     font-size: 14px;
@@ -29,7 +29,7 @@ a { color: #0088ff; text-decoration: underline; cursor: pointer; }
 a:hover { text-decoration: none; color: #054f90; }
 
 /* Forms */
-input, input.form-control, 
+input, input.form-control,
 textarea, textarea.form-control { border: 1px solid #e5e5e5; border-radius: 0; }
 button.ladda-button { background: #0088ff; }
 
@@ -49,7 +49,7 @@ table.table > tbody > tr > td { text-align: left; padding: 10px 15px 10px 15px; 
 #smsgw > div { position: relative; width: 100%; height: 100%; }
 
 /* Sign in/up and reset password */
-#sign { width: 300px; margin: 0 auto 0 auto; padding: 11% 0 0 0; } 
+#sign { width: 300px; margin: 0 auto 0 auto; padding: 11% 0 0 0; }
 #sign h1 { float: left; margin: 0 0 15px 0; padding: 0; font-size: 40px; font-weight: normal; color: #000000; }
 #sign h2 { float: right; margin: 0 0 15px 0; padding: 0; font-size: 40px; font-weight: normal; color: #0088ff;  }
 #sign.resetPassword h2 { font-size: 28px; padding-top: 10px; }
@@ -65,12 +65,13 @@ table.table > tbody > tr > td { text-align: left; padding: 10px 15px 10px 15px; 
 .navbar-nav > li > a { font-size: 30px; color: #0088ff; text-decoration: none; padding: 15px 10px; }
 .navbar-nav > li > a:hover { color: #054f90; background: #ffffff; }
 .navbar-nav > li > a.active { color: #054f90; background: #ffffff; }
-.navbar-nav.navbar-right > li.dropdown > a { position: relative; padding: 5px 15px 0 0; margin: 0; background: #ffffff; }
+.navbar-nav.navbar-right > li.dropdown > a { position: relative; padding: 5px 15px 0 0; margin: 0; text-decoration: none; background: #ffffff; }
 .navbar-nav.navbar-right > li.dropdown.open > a { background: #ffffff; }
 .navbar-nav.navbar-right > li.dropdown > a .caret { top: -10px; }
 .navbar-nav.navbar-right > li.dropdown > a .info { float: left; padding-right: 6px; }
 .navbar-nav.navbar-right > li.dropdown > a .info .name { font-size: 18px; color: #0088ff; }
 .navbar-nav.navbar-right > li.dropdown > a .info .company { font-size: 14px; text-transform: uppercase; color: #000000;  }
+.navbar-nav.navbar-right > li.dropdown > ul > li > a { text-decoration: none; }
 
 /* Subheader */
 #subheader { display: block; padding: 20px 20px 0 20px; background-color: #f5f5f5; border-bottom: 1px solid #e5e5e5; }
