Templates: updating content of forgotten password email

--- a/smsgw/templates/mail/forgotten_password.html
+++ b/smsgw/templates/mail/forgotten_password.html
@@ -1,4 +1,9 @@
-Forgotten password
+Hi {{first_name}},
 
+you have asked for reseting password. On this link you can change your new
+password:
 
-Here should be link to reset password
+http://smsgw.local/#/reset-password/{{token}}/
+
+Thansk,
+smsgw
