Fix: correcting JS build path in index template

--- a/smsgw/templates/index.html
+++ b/smsgw/templates/index.html
@@ -22,6 +22,6 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="{{ url_for('static', filename='build/bundle.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='build/js/main.js') }}"></script>
 </body>
 </html>
