--- a/smsgw/static/css/app.css
+++ b/smsgw/static/css/app.css
@@ -110,3 +110,40 @@ table.table > tbody > tr > td { text-align: left; padding: 10px 15px 10px 15px; 
 #context .tags .autocomplete .throbber { float: right; width: 32px; height: 32px; margin-top: 5px; background: url('/images/throbber.gif') no-repeat; }
 #context .tags .autocomplete ul.options { position: absolute; top: 47px; max-height: 300px; width: 212px; z-index: 10; padding: 0; margin: 0; background: #ffffff; list-style: none; border: 1px solid #e5e5e5; border-top: 0; }
 #context .tags .autocomplete ul.options li { float: left; width: 202px; margin: 0; padding: 5px; cursor: pointer; border-bottom: 1px solid #e5e5e5; }
+
+/* React tags input */
+
+.react-tagsinput { background-color: #fff; border: 1px solid #ccc; overflow: hidden; padding-left: 5px; padding-top: 5px; }
+.react-tagsinput-tag {
+  background-color: #cde69c;
+  border-radius: 2px;
+  border: 1px solid #a5d24a;
+  color: #638421;
+  float: left;
+  font-family: sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  margin-bottom: 5px;
+  margin-right: 5px;
+  padding: 5px;
+}
+.react-tagsinput-tag.contact { background-color: #0088ff; color: #ffffff; }
+.react-tagsinput-tag .react-tagsinput-remove { cursor: pointer; font-weight: bold; }
+.react-tagsinput-tag .react-tagsinput-remove:before { content: " x"; }
+.react-tagsinput-tag.contact .react-tagsinput-remove { color: #ffffff; }
+.react-tagsinput-input {
+  background: transparent;
+  border: 0;
+  color: #777;
+  font-family: sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  margin-bottom: 6px;
+  margin-top: 1px;
+  outline: none;
+  padding: 5px;
+  width: 80px;
+}
+.react-tagsinput-invalid { background-color: #fbd8db; color: #90111a; }
+.react-tagsinput-validating { background: #fffacd; }
+.react-tagsinput-completion { margin-top: 10px; }
