--- a/smsgw/static/css/app.css
+++ b/smsgw/static/css/app.css
@@ -1,3 +1,10 @@
+/* Imports */
+
+@import './ladda.css';
+@import './spinner.css';
+@import './fonts.css';
+@import './datepicker.css';
+
 /* Main app.css file */
 
 html { width: 100%; height: 100%; }
