--- a/smsgw/static/css/app.css
+++ b/smsgw/static/css/app.css
@@ -82,6 +82,9 @@ table.table > tbody > tr > td { text-align: left; padding: 10px 15px 10px 15px; 
 .navbar-nav.navbar-right > li.dropdown > a .info .company { font-size: 14px; text-transform: uppercase; color: #000000;  }
 .navbar-nav.navbar-right > li.dropdown > ul > li > a { text-decoration: none; }
 
+.navbar .navbar-toggle .icon-bar { background: #0088ff; }
+.navbar .navbar-toggle:hover .icon-bar { background: #054f90; }
+
 /* Subheader */
 #subheader { display: block; padding: 20px 20px 0 20px; background-color: #f5f5f5; border-bottom: 1px solid #e5e5e5; }
 #subheader h1 { font-weight: normal; font-size: 26px; margin: 0 0 12px 0; line-height: 24px; }
@@ -157,10 +160,19 @@ table.table > tbody > tr > td { text-align: left; padding: 10px 15px 10px 15px; 
 .react-tagsinput-completion { margin-top: 10px; }
 .react-tagsinput-completion .react-tagsinput-tag { cursor: pointer; }
 
-@media only screen and (max-width: 1250px) {
+@media only screen and (min-width: 601px) and (max-width: 1250px) {
 
   .navbar-nav > li > a { font-size: 22px;  padding: 18px 5px; }
   .navbar-nav.navbar-right > li.dropdown > a { padding: 9px 15px 0 0; }
+  .table-responsive { overflow: auto; }
+
+
+}
+
+@media only screen and (max-width: 600px) {
+
+  .container-fluid { padding-left: 0px; padding-right: 0px; }
+  .table-responsive { overflow: auto; }
 
 
 }
